force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/ucinn_ascendv2__Review_Transaction_Prefixes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains Record Type Prefixes (BOFA, KUSC, RNLT, ATHL, WKDY, etc.)</description>
    <label>Review Transaction Prefixes</label>
</CustomObject>