force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Clear_Remaining_Designation__c.field-meta.xml
<CustomField>
    <fullName>Clear_Remaining_Designation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clears the remaining designations on the review transactions that are not on the pledge/gift.</description>
    <inlineHelpText>Clears the remaining designations on the review transactions that are not on the pledge/gift.</inlineHelpText>
    <label>Clear Remaining Designation</label>
    <type>Checkbox</type>
</CustomField>