force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Create_Interim_If_No_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Create_Interim_If_No_Constituent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create interim record if constituent is not found and not created.</description>
    <inlineHelpText>Create interim record if constituent is not found and not created.</inlineHelpText>
    <label>Create_Interim_If_No_Constituent</label>
    <type>Checkbox</type>
</CustomField>