force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Default_to_Manual_Review__c.field-meta.xml
<CustomField>
    <fullName>Default_to_Manual_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to always set status to Manual Review instead of trying to automatically process it.</description>
    <inlineHelpText>Whether or not to always set status to Manual Review instead of trying to automatically process it.</inlineHelpText>
    <label>Default to Manual Review</label>
    <type>Checkbox</type>
</CustomField>