force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Designation_Detail_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Designation_Detail_Field_Map__c</fullName>
    <label>Designation Detail Field Map</label>
    <type>TextArea</type>
</CustomField>