force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Donor_External_ID_Override__c.field-meta.xml
<CustomField>
    <fullName>Donor_External_ID_Override__c</fullName>
    <label>Donor External ID Override</label>
    <type>TextArea</type>
</CustomField>