force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Hard_and_Soft_Credit_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Hard_and_Soft_Credit_Field_Map__c</fullName>
    <label>Hard and Soft Credit Field Map</label>
    <type>TextArea</type>
</CustomField>