force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Installment_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Installment_Field_Map__c</fullName>
    <label>Installment Field Map</label>
    <type>TextArea</type>
</CustomField>