force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Is_Pledge_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Pledge_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pledge Only</label>
    <type>Checkbox</type>
</CustomField>