force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Match_Against_Any_Pledge_Gift__c.field-meta.xml
<CustomField>
    <fullName>Match_Against_Any_Pledge_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uncheck if we only want to pay against the donor&apos;s pledges/gifts.  Check means the donor can pay other people&apos;s pledges/gifts.</description>
    <inlineHelpText>Uncheck if we only want to pay against the donor&apos;s pledges/gifts.  Check means the donor can pay other people&apos;s pledges/gifts.</inlineHelpText>
    <label>Match Against Any Pledge/Gift</label>
    <type>Checkbox</type>
</CustomField>