force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Match_Constituent_Against_Bio_Demo__c.field-meta.xml
<CustomField>
    <fullName>Match_Constituent_Against_Bio_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Matching the constituent using the bio information on the review transaction.  Default is match against first name, last name and email.</description>
    <inlineHelpText>Matching the constituent using the bio information on the review transaction.  Default is match against first name, last name and email.</inlineHelpText>
    <label>Match Constituent Against Bio Info</label>
    <type>Checkbox</type>
</CustomField>