force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Match_Designation_If_No_Pledge_Gift__c.field-meta.xml
<CustomField>
    <fullName>Match_Designation_If_No_Pledge_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is only applicable if we are only allowing payment to the donor&apos;s pledges/gifts, not others.  In this case, if we can&apos;t find the donor&apos;s pledge/gift specified by the review transaction, then we try to find one that matches the designations.</description>
    <inlineHelpText>This is only applicable if we are only allowing payment to the donor&apos;s pledges/gifts, not others.  In this case, if we can&apos;t find the donor&apos;s pledge/gift specified by the review transaction, then we try to find one that matches the designations.</inlineHelpText>
    <label>Match Designation If No Pledge/Gift</label>
    <type>Checkbox</type>
</CustomField>