force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Payment_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Payment_Field_Map__c</fullName>
    <label>Payment Field Map</label>
    <type>TextArea</type>
</CustomField>