force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Pledge_Gift_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Gift_Field_Map__c</fullName>
    <label>Pledge / Gift Field Map</label>
    <type>TextArea</type>
</CustomField>