force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Session_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Session_Field_Map__c</fullName>
    <label>Session Field Map</label>
    <type>TextArea</type>
</CustomField>