force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Tribute_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Field_Map__c</fullName>
    <label>Tribute Field Map</label>
    <type>TextArea</type>
</CustomField>