force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/ucinn_ascendv2__Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefix__c</fullName>
    <label>Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>