force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/ucinn_ascendv2__Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_API_Name__c</fullName>
    <label>Record Type API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>