force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Use_Appeal_on_Pledge_Gift_if_No_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Use_Appeal_on_Pledge_Gift_if_No_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override appeal on review transaction with appeal specified on the pledge/gift only if appeal is not already specified.</description>
    <inlineHelpText>Override appeal on review transaction with appeal specified on the pledge/gift only if appeal is not already specified.</inlineHelpText>
    <label>Use Appeal on Pledge/Gift if No Appeal</label>
    <type>Checkbox</type>
</CustomField>