force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Use_Constit_on_Pledge_Gift_If_No_Donor__c.field-meta.xml
<CustomField>
    <fullName>Use_Constit_on_Pledge_Gift_If_No_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override constituent on review transaction with constituent specified on the pledge/gift only if the donor is not already specified.</description>
    <inlineHelpText>Override constituent on review transaction with constituent specified on the pledge/gift only if the donor is not already specified.</inlineHelpText>
    <label>Use Constit on Pledge/Gift If No Donor</label>
    <type>Checkbox</type>
</CustomField>