force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Use_Pledge_for_Payment_Amount_Always__c.field-meta.xml
<CustomField>
    <fullName>Use_Pledge_for_Payment_Amount_Always__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always use the pledge to determine the payment amount.  This is based on the next installment for each designation that has not been fully paid yet.</description>
    <inlineHelpText>Always use the pledge to determine the payment amount.  This is based on the next installment for each designation that has not been fully paid yet.</inlineHelpText>
    <label>Use Pledge for Payment Amount Always</label>
    <type>Checkbox</type>
</CustomField>