force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefixes__c/fields/Use_Pledge_for_Payment_Amount_if_No_Amt__c.field-meta.xml
<CustomField>
    <fullName>Use_Pledge_for_Payment_Amount_if_No_Amt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the pledge to determine the payment amount only if the payment amount is not specified. This is based on the next installment for each designation that has not been fully paid yet.</description>
    <inlineHelpText>Use the pledge to determine the payment amount only if the payment amount is not specified. This is based on the next installment for each designation that has not been fully paid yet.</inlineHelpText>
    <label>Use Pledge for Payment Amount if No Amt</label>
    <type>Checkbox</type>
</CustomField>